# hack

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  prompts.py  tools.py
backend/app/api/: chat.py  demographics.py  forecast.py  map_data.py  municipalities.py  population.py  reports.py  router.py
backend/app/data_loader/: load_csv.py  seed_data.py
backend/app/models/: __init__.py  demographics.py  forecast.py  municipality.py  population.py  region.py  report.py
backend/app/schemas/: chat.py  demographics.py  forecast.py  municipality.py  population.py  report.py
backend/app/services/: chat_service.py  forecast_features.py  forecast_service.py  llm.py  report_service.py
backend/data/models/: population_forecast_ridge_v1.json  population_forecast_ridge_v1.metrics.json
backend/scripts/: train_forecast_model.py
backend/tests/: test_chat_api.py  test_forecast_api.py  test_map_api.py  test_report_api.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: chat.ts  client.ts  forecast.ts  population.ts  reports.ts
frontend/src/lib/: yandexMaps.ts
frontend/src/pages/: DashboardPage.tsx  ForecastPage.tsx  MapPage.tsx  ReportsPage.tsx
frontend/src/store/: useChatStore.ts  useFilterStore.ts
frontend/src/styles/: global.css
ml/: model.py  requirements.txt  train_predict_model.ipynb
(+13 files in other folders)
